[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "keparutils"
version = "0.0.1"
authors = [
  { name="Kepar", email="kepar@kepar.ml" },
]
description = "All of the random tools in keparutils"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Kolhax"
"Bug Tracker" = "https://github.com/Kolhax"